wk_taa_taaqa/src/objects/Support_Site_Product_Details__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will hold Support Site Product Listing - used in Sales to Service Integration Project which allows case creation in Service Org.</description>
    <fields>
        <fullName>AccountType__c</fullName>
        <description>This field holds Account Type</description>
        <inlineHelpText>This field holds Account Type: s = Small Firm Services, o = Other</inlineHelpText>
        <label>AccountType</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <description>This holds the Product Id (can be duplicates as per seed file data)</description>
        <inlineHelpText>This holds the Product Id (can be duplicates as per seed file data)</inlineHelpText>
        <label>Product Id</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>This field holds Support Site Product Name</description>
        <inlineHelpText>This field holds Support Site Product Name</inlineHelpText>
        <label>Product Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Support Site Product Details</label>
</CustomObject>